@@ -78,9 +78,12 @@ mqsh
 Similar to qshell, but uses the mrsh protocol instead of the rsh protocol.
 .TP
 krb4
-THe krb4 module allows users to execute remote commands after 
+The krb4 module allows users to execute remote commands after 
 authenticating with kerberos. Of course, the remote rshd daemons
 must be kerberized.
+.TP
+xcpu
+The xcpu module uses the xcpu service to execute remote commands.
 
 .SH OPTIONS
 The list of available options is determined at runtime
